<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fall2018.csc2017.gamecentre.cardmatching.MatchingStartingActivity">

    <Button
        android:id="@+id/MatchingScoreButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/MatchingStartButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="147dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="147dp"
        android:onClick="scoreboardPressed"
        android:text="@string/score_board"/>

    <TextView
        android:id="@+id/GameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/Matching_Welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <Button
        android:id="@+id/MatchingLoadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/GameText"
        android:layout_toStartOf="@+id/MatchingStartButton"
        android:text="@string/load_saved_game" />

    <Button
        android:id="@+id/MatchingSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/GameText"
        android:layout_toEndOf="@+id/MatchingStartButton"
        android:text="@string/save_game" />

    <Button
        android:id="@+id/MatchingSettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/MatchingSaveButton"
        android:layout_alignBottom="@+id/MatchingScoreButton"
        android:text="@string/settings"/>

    <Button
        android:id="@+id/MatchingStartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/GameText"
        android:layout_centerHorizontal="true"
        android:text="@string/new_game" />
    <!--android:onClick="settingsPressed"/>-->

</RelativeLayout>